--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,6 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&family=Rubik:wght@800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/styles.css">
+    <link rel="icon" href="/storage.png">
     <title>Inventory</title>
   </head>
   <body class="container justify-content-center">
